package com.flashsale.seckillservice.mapper;

import com.baomidou.mybatisplus.core.mapper.BaseMapper;
import com.flashsale.seckillservice.entity.SeckillActivity;
import org.apache.ibatis.annotations.Mapper;

@Mapper
public interface SeckillActivityMapper extends BaseMapper<SeckillActivity> {
}
