package com.flashsale.seckillservice.service.impl;

import com.fasterxml.jackson.core.JsonProcessingException;
import com.fasterxml.jackson.databind.ObjectMapper;
import com.flashsale.common.constant.ErrorCode;
import com.flashsale.common.exception.BusinessException;
import com.flashsale.seckillservice.dto.SeckillMessage;
import com.flashsale.seckillservice.service.FlashSaleService;
import org.slf4j.Logger;
import org.slf4j.LoggerFactory;
import org.springframework.amqp.rabbit.core.RabbitTemplate;
import org.springframework.beans.factory.annotation.Value;
import org.springframework.data.redis.core.StringRedisTemplate;
import org.springframework.stereotype.Service;

import java.time.Instant;
import java.time.LocalDateTime;
import java.time.ZoneId;
import java.util.UUID;

/**
 * 秒杀抢购核心服务 — 全程无锁、无DB操作、原子化
 *
 * 流程：
 *   ① 校验活动状态（Redis缓存 → DB兜底）
 *   ② 校验活动时间
 *   ③ SADD 防重复抢购
 *   ④ DECR 原子扣减库存
 *   ⑤ 发送 MQ 消息异步落单
 *   ⑥ 返回"排队中"
 */
@Service
public class FlashSaleServiceImpl implements FlashSaleService {

    private static final Logger log = LoggerFactory.getLogger(FlashSaleServiceImpl.class);

    private final StringRedisTemplate redisTemplate;
    private final RabbitTemplate rabbitTemplate;
    private final ObjectMapper objectMapper;

    @Value("${seckill.mq.exchange}")
    private String exchange;

    @Value("${seckill.mq.routing-key}")
    private String routingKey;

    public FlashSaleServiceImpl(StringRedisTemplate redisTemplate,
                                RabbitTemplate rabbitTemplate,
                                ObjectMapper objectMapper) {
        this.redisTemplate = redisTemplate;
        this.rabbitTemplate = rabbitTemplate;
        this.objectMapper = objectMapper;
    }

    @Override
    public String flash(Long activityId, Long userId) {
        // ========== ① 校验活动状态 ==========
        String cacheKey = "seckill:activity:" + activityId;
        String cached = redisTemplate.opsForValue().get(cacheKey);

        // If no cache, we rely on warmUp having been called.
        // In production, fall back to DB check would be here.
        if (cached == null || cached.isEmpty()) {
            log.warn("Activity {} not cached — warmUp may not have been called", activityId);
            throw new BusinessException(ErrorCode.BAD_REQUEST, "活动尚未预热或不存在");
        }

        // ========== ② 校验活动时间 ==========
        // Parse cached activity status (simple check via JSON — status field)
        // For performance, we keep a separate key for status
        String statusKey = "seckill:activity:status:" + activityId;
        String status = redisTemplate.opsForValue().get(statusKey);
        if (status == null) {
            // Extract from cached JSON
            try {
                // Quick check: look for "ACTIVE" in cached string
                if (!cached.contains("\"status\":\"ACTIVE\"")) {
                    throw new BusinessException(ErrorCode.BAD_REQUEST, "活动不在进行中");
                }
            } catch (Exception e) {
                throw new BusinessException(ErrorCode.BAD_REQUEST, "活动状态异常");
            }
        } else if (!"ACTIVE".equals(status)) {
            throw new BusinessException(ErrorCode.BAD_REQUEST, "活动不在进行中");
        }

        // Check time window (from cached JSON — quick check with start/end time)
        // For simplicity in sprint 1, check time via Redis key
        long now = System.currentTimeMillis();
        String timeKey = "seckill:activity:time:" + activityId;
        String timeRange = redisTemplate.opsForValue().get(timeKey);
        if (timeRange != null) {
            String[] parts = timeRange.split(",");
            if (parts.length == 2) {
                long start = Long.parseLong(parts[0]);
                long end = Long.parseLong(parts[1]);
                if (now < start || now > end) {
                    throw new BusinessException(ErrorCode.BAD_REQUEST, "不在活动时间范围内");
                }
            }
        }

        // ========== ③ 防重复抢购 ==========
        String boughtKey = "seckill:bought:" + activityId + ":" + userId;
        Boolean alreadyBought = redisTemplate.opsForSet().isMember("seckill:bought:" + activityId, String.valueOf(userId));
        if (Boolean.TRUE.equals(alreadyBought)) {
            log.warn("Duplicate purchase — userId={}, activityId={}", userId, activityId);
            throw new BusinessException(ErrorCode.CONFLICT, "您已抢购过该活动，不可重复抢购");
        }

        // ========== ④ Redis 原子扣减库存 ==========
        String stockKey = "seckill:stock:" + activityId;
        Long remain = redisTemplate.opsForValue().decrement(stockKey);
        if (remain == null || remain < 0) {
            // Rollback: increment back if we went below zero
            if (remain != null && remain < 0) {
                redisTemplate.opsForValue().increment(stockKey);
            }
            log.warn("Stock exhausted — activityId={}", activityId);
            throw new BusinessException(ErrorCode.BAD_REQUEST, "库存不足");
        }

        // ========== ⑤ 标记已抢购 ==========
        redisTemplate.opsForSet().add("seckill:bought:" + activityId, String.valueOf(userId));

        // ========== ⑥ 发送 MQ 消息异步落单 ==========
        long orderSn = generateOrderSn();

        // 从Redis专用key读取productId和seckillPrice（避免JSON字符串解析）
        String productIdStr = redisTemplate.opsForValue().get("seckill:activity:productId:" + activityId);
        Long productId = productIdStr != null ? Long.parseLong(productIdStr) : null;
        String priceStr = redisTemplate.opsForValue().get("seckill:activity:price:" + activityId);
        Long seckillPrice = priceStr != null ? Long.parseLong(priceStr) : null;

        SeckillMessage message = new SeckillMessage(userId, activityId,
                productId, seckillPrice, orderSn);

        try {
            String json = objectMapper.writeValueAsString(message);
            rabbitTemplate.convertAndSend(exchange, routingKey, json);
            log.info("MQ sent — activityId={}, userId={}, orderSn={}", activityId, userId, orderSn);
        } catch (JsonProcessingException e) {
            log.error("Failed to serialize SeckillMessage", e);
            throw new BusinessException(ErrorCode.INTERNAL_ERROR, "系统繁忙，请稍后重试");
        }

        return "排队中";
    }

    /**
     * 生成订单号：使用 UUID 确保全局唯一，避免并发冲突
     */
    private long generateOrderSn() {
        return Math.abs(UUID.randomUUID().getLeastSignificantBits());
    }
}
